# bsd-cpp

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  README.md  linux_kernel_build.md
c_hello/: README.md  build.sh  hello.c  linker.ld
cpp/: .gitignore  build.sh  get_namespace.py  get_ns_all.sh  get_symbols.cpp
cpy/: example.c  example.pyx  setup.py
link1/: build.sh  main.c  my_export.c  my_export_main.c  print1.c  print2.c
lua1/: .gitignore  Dockerfile  build.sh  fib.js  fib.lua  fib.py  fibonacci.lua  tcp_client.lua  tcp_server.lua
meson/: env1.c  env2.cpp  meson.build  socket_buf.cpp  stdout1.cpp
nanobind/: CMakeLists.txt  build_demo3.sh  demo1.cpp  demo2.cpp  demo3.cpp  my.py  my_demo2.py  my_demo3.py  person.cpp  run.sh  setup.py
nanobind/demo3/: __init__.py
nanobind/demo3_package/: setup.py
purec/: .gitignore  build.sh  command.txt  mybatch.c
py1/: t1.py
splice1/: CMakeLists.txt  client.py  sendFile1.cpp  server.cpp
src/: client.cpp  client1.cpp  client2.cpp  kqueue1.cpp  main.cpp  message.h  p1.cpp  p2.cpp  p3.cpp  p4.cpp  select1.cpp  server.cpp  shm1.cpp  worker.cpp
swf/: README.md
swf/s109/: Package.swift
swf/s109/Sources/: main.swift
uds/: .gitignore  client1.cpp  gen_message.py  install_xmake.sh  server1.cpp  tcp_client1.cpp  tcp_server1.cpp  udp_client1.cpp  udp_server1.cpp  uds_client1.cpp  uds_server1.cpp  xmake.lua
zmq1/: .gitignore  Makefile.am  autogen.sh  client1.cpp  configure.ac  cp_zmq_header.sh  server1.cpp
